<resources>
    <string name="app_name">Jano Abonce</string>

    //Menu principal
    <string name="eventos">Eventos</string>
    <string name="directos">Directos</string>
    <string name="config">Configuración</string>

    //Estandar
    <string name="btnTwitch">Ver en Twitch</string>
    <string name="sugerencia_Directo">La versión que usas es una versión BETA\nPara una mejor experiencia mira el\ndirecto en Twitch APP</string>
    <string name="notInstall">La aplicación de Twitch no esta instalada</string>
    <string name="linkPoliticas">https://stuarddevapps.web.app/politicas-de-privacidad.html</string>
    <string name="linkTerminos">https://stuarddevapps.web.app/terminos-y-condiciones.html</string>
    <string name="notification_channel_group_general">General</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="linkApoyaJano">https://www.paypal.com/donate/?hosted_button_id=M29QZGACKWFHN</string>
    <string name="contactanos">Contactanos</string>
    <string name="editor">Editor</string>
    <string name="txtSS">Inicio de Sesión</string>
    <string name="hintCorreo">Correo electronico</string>
    <string name="hintcontra">Contraseña</string>
    <string name="loginbtn">Ingresar</string>
    <string name="loginbtnRegister">Registrame</string>
    <string name="redes">Redes Sociales</string>
    <string name="regiter">Registro</string>
    <string name="registerRegistrame">Registrame</string>
    <string name="registerLogin">Inciar Sesion</string>

    //Config
    <string name="btI">Iniciar Sesion</string>
    <string name="btR">Redes Sociales</string>
    <string name="btA">Apoya a Jano Abonce</string>
    <string name="btE">Editor</string>
    <string name="btP">Politicas de privacidad</string>
    <string name="btT">Terminos y Condiciones</string>
    <string name="btH">Ayuda</string>
    <string name="btS">Salir</string>

    //Nombre de Redes
    <string name="strTwitch">Twitch</string>
    <string name="strInstagram">Instagram</string>
    <string name="strTwitter">Twitter</string>
    <string name="strSitio">Sitio web</string>
    <string name="strGitHub">GitHub</string>
    <string name="strFacebook">Facebook</string>
    <string name="strTikTok">TikTok</string>
    <string name="strCorreo">Correo Electronico</string>


    //Anuncios Banner
    <string name="banner1">ca-app-pub-6691938542138083/5703365549</string>
    <string name="banner2">ca-app-pub-6691938542138083/8963436784</string>
    <string name="banner3">ca-app-pub-6691938542138083/7919848239</string>
    <string name="banner4">ca-app-pub-6691938542138083/7458783426</string>
    <string name="banner5">ca-app-pub-6691938542138083/4832620088</string>
    <string name="banner6">ca-app-pub-6691938542138083/3519538416</string>

    //Anuncios intersictial
    <string name="inter1">ca-app-pub-6691938542138083/1269845251</string>


</resources>