<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentConfig">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/iniciarSesion"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btI"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_4"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/redesJano"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btR"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/apoyajano"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btA"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/editorRedes"
            android:layout_marginTop="30dp"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/black"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/purple_3"
            android:text="@string/btE"
            />

        <Button
            android:id="@+id/politicas"
            app:cornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red_7"
            android:text="@string/btP"/>
        <Button
            android:id="@+id/terminos"
            app:cornerRadius="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red_7"
            android:text="@string/btT"/>
        <Button
            android:id="@+id/ayudame"
            app:cornerRadius="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red_7"
            android:text="@string/btH"/>

        <Button
            android:id="@+id/close"
            app:cornerRadius="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:text="@string/btS"/>

    </LinearLayout>
</FrameLayout>