<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_acc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSS"
        android:textSize="36dp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/hintCorreo"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:layout_marginTop="300dp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:ems="10"
        android:hint="@string/hintcontra"
        android:inputType="textPassword" />



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:backgroundTint="#FF0400"
        android:textColor="@color/white"
        android:text="@string/loginbtn"
        app:cornerRadius="20dp" />
    <Button
        android:id="@+id/registerBtn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/loginbtnRegister"
        app:cornerRadius="20dp"
        android:textColor="#FF0400"
        app:strokeColor="#FF9D00"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginTop="460dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>