<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedesJano">
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="@string/banner5"></com.google.android.gms.ads.AdView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="Redes Sociales"
        android:textSize="36dp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_marginTop="59dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnTwitch"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strTwitch"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/twitch"
            app:cornerRadius="5dp"/>

        <Button
            android:id="@+id/btnInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strInstagram"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/ig"
            android:textColor="@color/white"
            app:cornerRadius="5dp"/>

        <Button
            android:id="@+id/btnTwitter"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strTwitter"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/twtt"
            android:textColor="@color/white"
            app:cornerRadius="5dp"/>

        <Button
            android:id="@+id/btnFacebook"
            app:cornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/fc"
            android:text="@string/strFacebook"
            />

        <Button
            android:id="@+id/btnTiktok"
            app:cornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/tt"
            android:text="@string/strTikTok"/>

        <Button
            android:id="@+id/btnWeb"
            app:cornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/web"
            android:text="@string/strSitio"/>

    </LinearLayout>
</RelativeLayout>